# numerai

./: .gitignore  README.md  pyproject.toml
notebooks/: hello_numerai.ipynb
numerai/: dataset.py  downloader.py  eval.py  model.py  train.py  utils.py
tests/: dataset_test.py  model_test.py  utils_test.py
