[tool.poetry]
name = "numerai"
version = "0.1.0"
description = ""
authors = ["Danila <ddbihbka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numerapi = "^2.16.3"
pyarrow = "^15.0.0"
seaborn = "^0.13.2"
numerai-tools = "^0.0.18"
facets-overview = "^1.1.1"
jupyter = "^1.0.0"
pytest = "^7.4.4"
torch = "^2.1.2"
tensorboard = "^2.15.1"
torch-tb-profiler = "^0.4.3"
tensorboard-plugin-profile = "^2.15.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
